# paranormal-0.2.0

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  actuators.c  configure  configure.in  mkinstalldirs  paranormal.c  pndoc.c  standalone.c  xmms.c
